feat: 要件定義書にユーザーの声を追加
- ユーザーの声セクションを追加し、3名のテストモニターからのフィードバックを掲載
- index.htmlのタイトルを「SaaS Applications」に変更
- ダッシュボードに戻るボタンの位置を調整し、全ページでの表示を確保
- コードの整理と可読性向上のための修正を実施

--- a/themes/kamui-docs/layouts/partials/code.html
+++ b/themes/kamui-docs/layouts/partials/code.html
@@ -1,1 +1,5 @@
-<pre class="code"><code>{{ . }}</code></pre>
+{{ $lang := "" }}
+{{ $code := . }}
+{{ with .language }}{{ $lang = . }}{{ end }}
+{{ with .content }}{{ $code = . }}{{ end }}
+<pre class="code"{{ if $lang }} data-lang="{{ $lang }}"{{ end }}><code>{{ $code }}</code></pre>
